fix: bg behind scrollbar

--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -136,6 +136,7 @@ body {
   overflow-y: auto;
   overflow-x: hidden;
   border-radius: var(--border-radius-m);
+  background-color: var(--background-tinted-base);
 }
 
 /* Hide scrollbar on view-container but keep functionality */
